# 263OSCLx

./: .gitignore  CMakeLists.txt  README.md  Type263.cpp
Include/: TRNSYS.h  TRNTYPE.h  meBox.hpp
Libs/: TRNDll.lib  TRNDll64.lib
Result/: Type263.tmf
